# humblebundle-downloader

./: .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
humblebundle_downloader/: __init__.py  cache.py  cli.py  download_library.py  generate_cookie.py
humblebundle_downloader/data/: cache.py
humblebundle_downloader/exceptions/: InvalidCookieException.py
humblebundle_downloader/iops/: file_ops.py
humblebundle_downloader/multiprocess/: exorcise_daemons.py
tests/: test_cli.py  test_download_library.py
